objects/disco__Discovery_Rule_Group__c.object
<CustomObject>
    <description>A  collection of Discovery Rules joined with others using AND logic to create Complex Discoveries for a Form Template</description>
    <fields>
        <fullName>disco__Discovery_Field_For_Discovery__c</fullName>
        <label>Discovery Field For Discovery</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Field_For_Form__c</fullName>
        <label>Discovery Field For Form</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Discovery Type</label>
        <referenceTo>disco__Discovery_Type__c</referenceTo>
        <relationshipLabel>Discovery Rule Groups</relationshipLabel>
        <relationshipName>Discovery_Rule_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Discovery Rule Groups</relationshipLabel>
        <relationshipName>Discovery_Rule_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Managed_Template_RandomId__c</fullName>
        <description>RandomId of managed template if the rule was copied in from a managed template</description>
        <externalId>true</externalId>
        <label>Managed Template RandomId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Discovery Rule Group</label>
    <nameField>
        <label>Discovery Rule Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery Rule Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>